 * Added new methods for sending raw lines to the IRC server
   * send(tagMap(...), command, arguments) replaces send(line)
   * send(command, arguments) is available if no tags are to be sent
   * the line is built automatically (with spaces/' :' added appropriately)
   * send(line) is deprecated and will be removed after v1.0.0
 * (Internal) Added annotation to track removal of deprecated methods

v0.9.0

 * Improve DSL for creating an IrcClient to allow parameters to be passed to server and profile
   e.g. IrcClient { server("irc.example.com", 6667) }
 * Add behaviour options
   * requestModesOnJoin - automatically sends a MODE request when joining a channel
 * Events now have a `metadata` property instead of a `time` (and time is available in metadata)
   * IrcEvent.time is now deprecated but will remain until after v1.0.0.
   * Metadata now contains the message ID, if any.
     * ActionReceived.messageId and MessageReceived.messageId are now deprecated, to be removed after v1.0.0.
   * Metadata now contains the event's batch ID, if any.
 * Added support for batches
   * All events in a batch are buffered until the batch is finished
   * The events are then published together in a single `BatchReceived` event
 * Added support for CHGHOST messages
 * (Internal) Improve performance when the MessageHandler is finding a processor for a message
 * (Internal) Introduced event mutators
   * Event mutators are now responsible for handling changing events in response to state
     e.g. ChannelFanOutMutator creates Channel* events for global quits/nick changes/etc
   * Event handlers now just handle events, and don't return anything

v0.8.0

 * Added support for SCRAM-SHA-1 and SCRAM-SHA-256 SASL mechanisms
 * Added MotdLineReceived event
 * Added topic events and state
 * Add utility method IrcClient.isChannel(String) to identify if a target is a channel or not
 * (Internal) Move event handlers into their own package

v0.7.0
