@@ -43,6 +43,7 @@ dependencies {
     testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0")
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.4.0")
+    testImplementation("io.mockk:mockk:1.9")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.4.0")
 }
 
